# penguin

./: .env.example  README.md  main.py  pyproject.toml
src/penguin/: __init__.py  agent.py  cli.py  config.py  tools.py
tests/: test_agent.py  test_config.py  test_tools.py
